WZU-4740 update docker image for confluence